horizontal repaired with app text-align center

--- a/finalmusic/style.css
+++ b/finalmusic/style.css
@@ -31,6 +31,7 @@ body{
   right: 0;
   margin: auto;
   overflow: hidden;
+  text-align: center;
 }
 
 .box{
@@ -45,7 +46,6 @@ body{
 
 .horizontal{
   display: inline-block;
-  position: absolute;
   left: 0;
   right: 0;
   height: 99%;
